# etrflib

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.run  README.md  compile.py  conftest.py  cxf2ctf.py  dacsagb.i  dacsagb.py  dacsagbPYTHON_wrap.cxx  dacsagb_wrap.cxx  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/: H501D07670X.cxf
etrflib/: __init__.py  main.py
scripts/docker/: Dockerfile  Dockerfile.run  build.py
src/: Geodesia.h  dacsagb.cpp  dacsagb.h  interpola.cpp  interpola.h
tests/: test_main.py
