[tool.poetry]
name = "etrflib"
version = "0.1.0"
description = ""
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>"]

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.15.0"
ipython = "^8.3.0"
pydffi = "^0.9.3"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
