[tool.poetry]
name = "etrflib"
version = "0.2.0"
description = ""
authors = ["Francesco Bartoli <francesco.bartoli@geobeyond.it>"]

[tool.poetry.scripts]
etrflib = "etrflib.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cffi = "^1.15.0"
ipython = "^8.3.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^1.10.13"
miniopy-async = "^1.16"
aiofiles = "^22.1.0"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^7.4.3"
docker = "^6.1.3"
minio = "^7.1.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
